// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Db Api Component should render correctly 1`] = `
<form
  action={undefined}
  className="ui success form"
  onSubmit={[Function]}
>
  <div
    className="fields"
  >
    <div
      className="required field"
    >
      <div
        className="ui input"
        content={undefined}
      >
        <input
          disabled={undefined}
          id="dbApi"
          name="text"
          onChange={[Function]}
          placeholder="Todos item text"
          required={true}
          tabIndex={undefined}
          type="text"
          value=""
        />
      </div>
    </div>
    <button
      className="ui button"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      Save Todos Item
    </button>
  </div>
  <div
    className="ui success message"
  >
    <div
      className="content"
    >
      <div
        className="header"
      >
        Todos Api Result
      </div>
      <p>
        result
      </p>
    </div>
  </div>
  <div
    className="ui error message"
  >
    <div
      className="content"
    >
      <div
        className="header"
      >
        Error Saving File
      </div>
    </div>
  </div>
</form>
`;

exports[`Db Api Component should render correctly with error 1`] = `
<form
  action={undefined}
  className="ui error success form"
  onSubmit={[Function]}
>
  <div
    className="fields"
  >
    <div
      className="required field"
    >
      <div
        className="ui input"
        content={undefined}
      >
        <input
          disabled={undefined}
          id="dbApi"
          name="text"
          onChange={[Function]}
          placeholder="Todos item text"
          required={true}
          tabIndex={undefined}
          type="text"
          value=""
        />
      </div>
    </div>
    <button
      className="ui button"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      Save Todos Item
    </button>
  </div>
  <div
    className="ui success message"
  >
    <div
      className="content"
    >
      <div
        className="header"
      >
        Todos Api Result
      </div>
      <p>
        result
      </p>
    </div>
  </div>
  <div
    className="ui error message"
  >
    <div
      className="content"
    >
      <div
        className="header"
      >
        Error Saving File
      </div>
      <p>
        error
      </p>
    </div>
  </div>
</form>
`;
